--- a/18052020.md
+++ b/18052020.md
@@ -1,5 +1,8 @@
-# Note du 18 05 2020
+# Détail de la journée du 18 05 2020
 
-Mise en place d'un plan d'adressage en ipv4/ipv6
+
+Re lecture du sujet et des objectifs
+
+Mise en place d'un plan d'adressage en ipv4/ipv6, à suivre le 19/05
 
 https://docs.google.com/spreadsheets/d/1zFA-i-1NdZ8Shb0r4ff5VIl1XpRT2mgDH1xgEIHK-KE/edit?ts=5ec284a0#gid=0
