--- a/docs/_annexes/R1.md
+++ b/docs/_annexes/R1.md
@@ -15,15 +15,18 @@ interfaces:
       pri: 255
     ipv6_addresses:
       - 'FE80::1'
-      - 'FD00:FD00:FD00:1::1/64'
+      - 'FD00:470:c814:2000::1/64'
+      - '2001:470:c814:2000::1/64'
     eigrp6:
     ospfv3:
       area: 0
       cost: 1
       pri: 255
   - id: GigabitEthernet0/1
-    description: "Internet connexion ip nat outside"
-    ipv4_address: dhcp
+    description: "Connexion to HQ"
+    ipv4_address: 10.0.1.1/24
+    ipv6_addresses:
+      - 'fe80::cafe:2/64'
   - id: GigabitEthernet0/2
     description: "Link to R2"
     ipv4_address: 10.192.225.1/24
@@ -69,14 +72,14 @@ dhcp:
   dhcp_excluded:
     - start: 10.192.1.1
       end: 10.192.1.100
-nat:
-  name: "LANS"
-  inside:
-    - GigabitEthernet0/0
-    - GigabitEthernet0/2
-    - GigabitEthernet0/3
-  outside: GigabitEthernet0/1
-  sources:
-    - "10.192.0.0 0.0.255.255"
-    - "172.16.0.0 0.0.255.255"
+#nat:
+#  name: "LANS"
+#  inside:
+#    - GigabitEthernet0/0
+#    - GigabitEthernet0/2
+#    - GigabitEthernet0/3
+#  outside: GigabitEthernet0/1
+#  sources:
+#    - "10.192.0.0 0.0.255.255"
+#    - "10.128.0.0 0.0.255.255"
 ```
